overflow-fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,21 @@
 *,
 *::after,
 *::before {
+
   overflow: hidden;
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
+
 html {
-  overflow: hidden;
+
   // This defines what 1rem is
   font-size: 1vh;
 }
 
 body {
-  overflow: hidden;
+
   box-sizing: border-box;
   padding: 19px;
 
